<resources>
    <string name="app_name">Password Manager</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_login_info">Add Login Information</string>
    <string name="edit_login_info">Edit Login Information</string>
    <string name="error_text">This Field Is Required</string>
    <string name="error_save_validation">Please Enter All Required Fields</string>
    <string name="item_deleted_successfully">Item Deleted Successfully</string>
    <string name="undo">UNDO</string>
    <string name="last_edited">Last Edited</string>
    <string name="unsaved_changes">You have unsaved changes</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="no_category">No Category</string>
    <string name="category">Category</string>

    <!-- __________ Categories ___________  -->
    <string name="adobe">Adobe</string>
    <string name="amazon">Amazon</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>
    <string name="gitlab">Gitlab</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="linux">Linux</string>
    <string name="microsoft">Microsoft</string>
    <string name="twitter">Twitter</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="yahoo">Yahoo</string>
    <string name="password_copied">Password Copied</string>
</resources>